# autorunx

./: .gitignore  INSTALL.md  INSTALL_zh.md  LICENSE  Makefile  README.md  README_zh.md  USAGE.md  USAGE_zh.md  pyproject.toml
examples/: basic_usage.py
src/autorunx/: __init__.py  cli.py  config.py  daemon.py  logger.py  models.py  monitor.py  process_manager.py  service_manager.py  storage.py
src/autostartx/: __init__.py  cli.py  config.py  daemon.py  interactive.py  logger.py  monitor.py  process_manager.py  service_manager.py  storage.py
tests/: __init__.py  conftest.py  test_config.py  test_models.py  test_storage.py
